--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -1,102 +1,45 @@
-.dashboard-container{
-    .dashboard-cards{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 20px;
-        grid-column-gap: 20px;
-        grid-row-gap: 20px;
+.card{
+    border: $border;
+    box-shadow: $shadow;
+    border-radius: $radius;
+    padding: 20px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-        .card-name{
+    .card-details{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        .card-total{
+            color: $toolbar;
             font-weight: 600;
-            font-size: .9em;
-        }
-
-        .reports-card{
-            grid-column: 1 / 3;
-            
-
-            .reports{
-                border: $border;
-                box-shadow: $shadow;
-                overflow: hidden;
-                padding: 20px;
-                border-radius: $radius;
-                background-color: #fff;
-
-                .report-record{
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    .card-total{
-                        color: $toolbar;
-                        font-weight: 500;
-                        font-size: 1.5em;
-                        font-style: uppercase;
-                    }
-
-                    .card-icon{
-                        background-color: #ddd;
-                        border-radius: 50%;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        padding: 12px;
-                        color: $btn-primary;
-                        background-color: #0e76bd33;
-
-                        .feather{
-                            height: 22px;
-                            width: 22px;
-                        }
-                    }
-                }
-
-            }
-        }
-
-        .exp-vs-sales{
-            border: .0625rem solid rgba(231,234,243,.7);
-            box-shadow: 0 6px 12px rgba(140,152,164,.075);
-            overflow: hidden;
-            padding: 20px;
-            border-radius: .75rem;
-            background-color: #fff;
-
-            h4{
-                color: $default;
-                font-weight: 500;
-                font-size: 1.2em;
-                margin-bottom: 15px;
-            }
-
-            #report-chart{
-                height: auto;
-            }
-        }
-
-        .report-details{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 20px;
-
-            .details1,
-            .details2{
-                border: .0625rem solid rgba(231,234,243,.7);
-                box-shadow: 0 6px 12px rgba(140,152,164,.075);
-                overflow: hidden;
-                padding: 20px;
-                border-radius: .75rem;
-                background-color: #fff;
-            }
-
-            // .details1{
-                
-            // }
-
-            // .details2{
-                
-            // }
+            font-size: 1.5em;
         }
     }
+
+    .card-icon{
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 12px;
+        color: $btn-primary;
+        background-color: #0e76bd33;
+        box-shadow: $shadow-sm;
+        margin-bottom: 10px;
+
+        .feather{
+            height: 20px;
+            width: 20px;
+        }
+    }
+}
+
+#report-chart{
+    // height: auto;
+    width: 100%;
 }
