--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -1,124 +1,172 @@
-.sidebar{
-    width: 350px !important;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    border-right: 1px solid #f3f3f3;
-    box-shadow: $shadow;
-    background-color: #fff;
+#sidebar{
+    overflow-y: auto;
     transition: all 1s ease;
+    background-color: #fff !important;
+}
 
-    .logo{
-        padding: 20px 0;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
+.branding-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-        img{
-            width: 130px;
-        }
-
-        button{
-            position: absolute;
-            right: 5px;
-            top: 20px;
-        }
+    img{
+        width: 130px;
+        height: 130px;
+        object-fit: cover;
     }
 
-    .btn-sidebar::-webkit-scrollbar-thumb{
-        display: none;
-    }
-
-    .btn-sidebar{
-        flex: 1;
-        list-style: none;
-        transition: all 0.2s ease;
-        overflow-y: auto !important;
-
-        li{
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-
-            a{
-                text-decoration: none;
-                color: $toolbar;
-                font-size: .9em;
-                font-weight: 500;
-                padding: 8px 0;
-                border-radius: 4px;
-                outline: none;
-                position: relative;
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-
-                .feather{
-                    width: 17px;
-                    height: 17px;
-                }
-
-                .awesome2{
-                    font-size: .5em !important;
-                }
-
-                span{
-                    margin-left: 15px;
-                }
-
-                .dropdown{
-                    position: absolute;
-                    right: 12px;
-                    transition: all .3s ease;
-                    transform: rotate(270deg);
-                }
-
-                &:hover{
-                    color: $btn-primary;
-                }
-
-                &:active{
-                    color: $toolbar;
-                }
-            }
-
-            .sub-nav{
-                transition: all .8s ease !important;
-                max-height: 0;
-            }
-
-            .sidebar-focus{
-                background: $btn-primary;
-                color: #fff;
-                box-shadow: $shadow;
-
-                &:hover{
-                    background: $btn-primary;
-                    color: #fff;
-                }
-            }
-
-            .dropdown-focus{
-                transform: rotate(360deg) !important;
-            }
-
-            .selected-color{
-                color: $btn-primary;
-            }
-        }
-
-        &:hover::-webkit-scrollbar-thumb{
-            display: block;
-        }
+    button{
+        position: absolute;
+        right: 10px;
+        top: 10px;
     }
 }
 
+.list-group-item{
+    font-size: .9em !important;
+    border: none !important;
+    padding: 10px 25px !important;
+    background-color: transparent !important;
+
+    &:hover .ellipsis{
+        transition: all .4s ease;
+        max-width: 150px;
+    }
+}
+
+.list-group-dropdown{
+    transition: all .4s ease;
+    max-height: 0;
+    overflow: hidden !important;
+}
+
+.font-text{   
+
+    .feather{
+        width: 8px !important;
+        height: 8px !important;
+    }
+}
+
+.ellipsis{
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 140px;
+}
+
+.chevron-down{
+    transition: all .4s ease;
+    transform: rotate(90deg) !important;
+}
+
+.chevron-right{
+    transition: all .4s ease;
+    transform: rotate(0deg) !important;
+}
 
 .slide-nav{
-    width: 300px !important;
-    position: absolute;
+    width: 100% !important;
+    // position: absolute;
 	z-index: 9999;
 }
+
+// .sidebar{
+//     width: 300px !important;
+//     overflow: hidden;
+//     position: relative;
+//     display: flex;
+//     flex-direction: column;
+//     border-right: 1px solid #f3f3f3;
+//     box-shadow: $shadow;
+//     background-color: #fff;
+//     transition: all 1s ease;
+    
+
+//     .btn-sidebar::-webkit-scrollbar-thumb{
+//         display: none;
+//     }
+
+//     .btn-sidebar{
+//         flex: 1;
+//         list-style: none;
+//         transition: all 0.2s ease;
+//         overflow-y: auto !important;
+
+//         li{
+//             display: flex;
+//             flex-direction: column;
+//             overflow: hidden;
+
+//             a{
+//                 text-decoration: none;
+//                 color: $toolbar;
+//                 font-size: .9em;
+//                 font-weight: 500;
+//                 padding: 8px 0;
+//                 border-radius: 4px;
+//                 outline: none;
+//                 position: relative;
+//                 display: flex;
+//                 align-items: center;
+//                 justify-content: flex-start;
+
+//                 .feather{
+//                     width: 17px;
+//                     height: 17px;
+//                 }
+
+//                 .awesome2{
+//                     font-size: .5em !important;
+//                 }
+
+//                 span{
+//                     margin-left: 15px;
+//                 }
+
+//                 .dropdown{
+//                     position: absolute;
+//                     right: 12px;
+//                     transition: all .3s ease;
+//                     transform: rotate(270deg);
+//                 }
+
+//                 &:hover{
+//                     color: $btn-primary;
+//                 }
+
+//                 &:active{
+//                     color: $toolbar;
+//                 }
+//             }
+
+//             .sub-nav{
+//                 transition: all .8s ease !important;
+//                 max-height: 0;
+//             }
+
+//             .sidebar-focus{
+//                 background: $btn-primary;
+//                 color: #fff;
+//                 box-shadow: $shadow;
+
+//                 &:hover{
+//                     background: $btn-primary;
+//                     color: #fff;
+//                 }
+//             }
+
+//             .dropdown-focus{
+//                 transform: rotate(360deg) !important;
+//             }
+
+//             .selected-color{
+//                 color: $btn-primary;
+//             }
+//         }
+
+//         &:hover::-webkit-scrollbar-thumb{
+//             display: block;
+//         }
+//     }
+// }
