--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 // Variables
 @import 'variables';
@@ -38,7 +39,7 @@
 }
 
 html{
-    // overflow-y: hidden;
+    overflow-y: hidden;
 }
 
 body{
